# line_trnsltrbt

./: .dockerignore  .gitignore  AUDIO_UPLOAD_FIX.md  CONCURRENCY_VERIFICATION.md  CONVERSION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_STRUCTURE.md  Dockerfile  Dockerfile.messenger  FACEBOOK_MIGRATION_PLAN.md  FACEBOOK_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE_PLAN.md  QUICK_START.md  README.md  SERVICE_ACCOUNT_PERMISSIONS.md  VOICE_TRANSLATION_PLAN.md  cloudbuild-messenger.yaml  cloudbuild.yaml  com.line.translator.bot.plist  daemon_setup.sh  deploy-messenger.sh  deploy_gcs.sh  gcs_audio.py  gcs_translate.py  line_translator_bot.py  messenger_translator_bot.py  project_note.md  pyproject.toml  run_local.sh  user_settings.json
.cursor/plans/: enable_voice_american_mode.plan.md  switch_command_feature_7f866876.plan.md
